<resources>
    <string name="app_name">Switching Activities</string>
    <string name="action_settings">Settings</string>
    <string name="first_activity_hello">Activity 1</string>
    <string name="gostring">Go</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="second_activity_hello">Activity 2</string>
    <string name="third_activity_hello">Activity 3</string>
    <string name="back">Back</string>
    <string name="enter">Enter</string>
    <string name="label1">STRING 1: </string>
    <string name="label2">STRING 2:</string>
    <string name="label3">STRING 3:</string>
    <string name="defaultString" />
</resources>
