<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dealfaro.luca.backandforthstudio.ThirdActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/third_activity_hello"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


    <TextView
        android:id="@+id/textViewS1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="41dp"
        android:text="@string/label1" />

    <TextView
        android:id="@+id/textViewS2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewS1"
        android:layout_marginTop="58dp"
        android:text="@string/label2" />

    <TextView
        android:id="@+id/textViewS3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewS2"
        android:layout_marginTop="63dp"
        android:text="@string/label3" />

    <TextView
        android:id="@+id/textViewA2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewS2"
        android:layout_alignBottom="@+id/textViewS2"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/defaultString"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewS3"
        android:layout_alignBottom="@+id/textViewS3"
        android:layout_alignLeft="@+id/textViewA2"
        android:layout_alignStart="@+id/textViewA2"
        android:ems="10"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        android:id="@+id/buttonA2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewA2"
        android:layout_alignBottom="@+id/textViewA2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="goA2"
        android:text="@string/gostring" />

    <Button
        android:id="@+id/buttonA3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/editText1"
        android:onClick="setValue3"
        android:text="@string/enter" />

    <TextView
        android:id="@+id/textViewA1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewA2"
        android:layout_alignStart="@+id/textViewA2"
        android:layout_alignTop="@+id/textViewS1"
        android:text="@string/defaultString"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        android:id="@+id/buttonA1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewA1"
        android:layout_alignBottom="@+id/textViewA1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="goA1"
        android:text="@string/gostring" />

</RelativeLayout>

